# chatbot_project

./: docker-compose.yml  pyproject.toml
guide/: message.tex
src/: .pre-commit-config.yaml  Dockerfile  main.py  requirements.txt
src/app/ai/index_graph/: configuration.py  graph.py  state.py
src/app/ai/researcher_graph/: __init__.py  graph.py  state.py
src/app/ai/retrieval_graph/: __init__.py  configuration.py  graph.py  state.py
src/app/ai/shared/: configuration.py  retrieval.py  state.py  utils.py
src/app/controller/: auth.py  conversation.py
src/app/core/: chatbot.py  config.py  db.py  redis_client.py
src/app/dto/: auth.py  chat_dto.py  conversation.py  events.py  message.py  user.py
src/app/model/: conversation.py  message.py  role.py  user.py
src/app/repository/: conversation_repository.py  user_repository.py
src/app/security/: deps.py  jwt_tokens.py  password.py
src/app/services/: cache_service.py  chat_service.py  conversation_service.py  user_services.py
src/app/utils/: prompts.py  tbconstants.py
src/resources/static/css/: style.css
src/resources/static/js/: chat.js
src/resources/templates/: chat.html  login.html
src/scripts/: ingest_to_es.py  inspect_user.py  set_user_password.py
src/test/: integration_tests.py  test_ai.py  unit_tests.py
